2006-02-21  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter2.cs : (WriteStartAttribute) reduced string == string.

2006-02-21  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocument.cs : (ReadNodeCore) not public.

2006-02-21  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter2.cs : (CloseStartElement)
	  Avoid ArrayList.Clear() and culture-sensitive Contains().

2006-02-21  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNamespaceManager.cs : added internal LookupPrefixExclusive()
	  which discards "overriden" namespaces.
	* XmlTextWriter2.cs : fresh implementation.
	  - The source structure is simplified and cleaner.
	  - When outputting escaped string, output directly to TextWriter.
	  - roughly 20% performance improvement.

	  (Also fixed previous perf. evaluation excess in ChangeLog.)

2006-02-20  Atsushi Enomoto <atsushi@ximian.com>

	* XmlElement.cs : (WriteTo) make use of HasAttributes. Remove extra
	  check. 5% speed improvement.

2006-02-20  Atsushi Enomoto <atsushi@ximian.com>

	* DTDValidatingReader2.cs : added Source XmlReader property for
	  XsdValidatingReader use (see XsdValidatingReader change as well).

2006-02-20  Atsushi Enomoto <atsushi@ximian.com>

	* EntityResolvingXmlReader.cs, XmlNodeReader2.cs, XmlTextReader2.cs :
	  in get_NodeType() entity reader existence check is faster.
	* DTDValidatingReader2.cs : IsDefault could be avoided.

2006-02-20  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNodeReaderImpl.cs : optimized Depth.

2006-02-20  Atsushi Enomoto <atsushi@ximian.com>

	* XmlValidatingReader.cs : reducing layered ReadState invocation
	  results in 10% speed up.

2006-02-20  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNodeReaderImpl.cs : Reimplemented Read(). Points are:
	  - reduced call to NextSibling which is very unlikely to be inlined
	  - reorganized conditioning to avoid extra check
	  - added description on each returning branch.
	  - And then, removed unused code.
	  It is 1.5x faster than before.
