@@ -1,5 +1,10 @@
 2006-02-21  Atsushi Enomoto <atsushi@ximian.com>
 
+	* XmlTextWriter2.cs : (WriteStartAtribute) more == removal.
+	* XmlNode.cs : (get_InnerText) reduce extra StringBuilder creation.
+
+2006-02-21  Atsushi Enomoto <atsushi@ximian.com>
+
 	* XmlTextWriter2.cs : (WriteStartAttribute) reduced string == string.
 
 2006-02-21  Atsushi Enomoto <atsushi@ximian.com>
